// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleNav should render correctly (snapshot) 1`] = `
<div>
  <div
    aria-label="footer-navigation"
    class="flex-container p-auto container relative mx-auto my-0 h-full"
    role="navigation"
  >
    <div
      class="inline-flex mr-6 flex-1 md:mr-24"
      style="opacity: 0; transform: translateX(20px);"
      tabindex="0"
    >
      <a
        class="flex-container bg-gradient-primary w-full rounded-full py-8 text-4xl text-light"
        href="/post/2BasicNotes"
      >
        <span
          aria-label="Prev"
          class="anticon anticon-arrow-left"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="arrow-left"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M872 474H286.9l350.2-304c5.6-4.9 2.2-14-5.2-14h-88.5c-3.9 0-7.6 1.4-10.5 3.9L155 487.8a31.96 31.96 0 000 48.3L535.1 866c1.5 1.3 3.3 2 5.2 2h91.5c7.4 0 10.8-9.2 5.2-14L286.9 550H872c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
            />
          </svg>
        </span>
      </a>
    </div>
    <div
      class="inline-flex ml-6 flex-1 md:ml-24"
      style="opacity: 0; transform: translateX(20px);"
      tabindex="0"
    >
      <a
        class="flex-container bg-gradient-primary w-full rounded-full py-8 text-4xl text-light"
        href="/post/0BasicNotes"
      >
        <span
          aria-label="Next"
          class="anticon anticon-arrow-right"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="arrow-right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M869 487.8L491.2 159.9c-2.9-2.5-6.6-3.9-10.5-3.9h-88.5c-7.4 0-10.8 9.2-5.2 14l350.2 304H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h585.1L386.9 854c-5.6 4.9-2.2 14 5.2 14h91.5c1.9 0 3.8-.7 5.2-2L869 536.2a32.07 32.07 0 000-48.4z"
            />
          </svg>
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`ArticleNav should render correctly with partial data (snapshot) 1`] = `
<div>
  <div
    aria-label="footer-navigation"
    class="flex-container p-auto container relative mx-auto my-0 h-full"
    role="navigation"
  >
    <div
      class="inline-flex mr-6 flex-1 md:mr-24"
      style="opacity: 0; transform: translateX(20px);"
      tabindex="0"
    >
      <a
        class="flex-container bg-gradient-primary w-full rounded-full py-8 text-4xl text-light"
        href="/posts"
      >
        <span
          aria-label="Home"
          class="anticon anticon-home"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="home"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M946.5 505L560.1 118.8l-25.9-25.9a31.5 31.5 0 00-44.4 0L77.5 505a63.9 63.9 0 00-18.8 46c.4 35.2 29.7 63.3 64.9 63.3h42.5V940h691.8V614.3h43.4c17.1 0 33.2-6.7 45.3-18.8a63.6 63.6 0 0018.7-45.3c0-17-6.7-33.1-18.8-45.2zM568 868H456V664h112v204zm217.9-325.7V868H632V640c0-22.1-17.9-40-40-40H432c-22.1 0-40 17.9-40 40v228H238.1V542.3h-96l370-369.7 23.1 23.1L882 542.3h-96.1z"
            />
          </svg>
        </span>
      </a>
    </div>
    <div
      class="inline-flex ml-6 flex-1 md:ml-24"
      style="opacity: 0; transform: translateX(20px);"
      tabindex="0"
    >
      <a
        class="flex-container bg-gradient-primary w-full rounded-full py-8 text-4xl text-light"
        href="/posts"
      >
        <span
          aria-label="Home"
          class="anticon anticon-home"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="home"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M946.5 505L560.1 118.8l-25.9-25.9a31.5 31.5 0 00-44.4 0L77.5 505a63.9 63.9 0 00-18.8 46c.4 35.2 29.7 63.3 64.9 63.3h42.5V940h691.8V614.3h43.4c17.1 0 33.2-6.7 45.3-18.8a63.6 63.6 0 0018.7-45.3c0-17-6.7-33.1-18.8-45.2zM568 868H456V664h112v204zm217.9-325.7V868H632V640c0-22.1-17.9-40-40-40H432c-22.1 0-40 17.9-40 40v228H238.1V542.3h-96l370-369.7 23.1 23.1L882 542.3h-96.1z"
            />
          </svg>
        </span>
      </a>
    </div>
  </div>
</div>
`;
